Modified the edge roundness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="bg-[url('../assets/background.png')] bg-cover">
     <div class="flex flex-col items-center justify-center h-screen">
-        <div class="form-container bg-gradient-to-br from-sky-600 to-sky-800 w-full max-w-80 md:max-w-lg lg:max-w-lg p-2 rounded-lg">
+        <div class="form-container bg-gradient-to-br from-sky-600 to-sky-800 w-full max-w-80 md:max-w-lg lg:max-w-lg p-2 rounded-xl">
             <form id="searchForm" class="p-3">
                 <h1 class="text-center text-4xl text-white mt-1 mb-4 font-bold">
                     Weatherly
